[package]
name = "como-mqtt"
version = "0.1.0"
authors = ["Ruslan Pislari <ruslanti@gmail.com>"]
edition = "2021"

[dependencies]
tokio = { version = "1.15.0", features = ["net", "time"] }
tokio-util = { version = "0.6.9", features = ["codec"] }
bytes = "1.1.0"
byteorder = "1.4.3"
anyhow = "1.0.52"
thiserror = "1.0.30"
#serde = { version = "1.0.133", features = ["derive"] }
tracing = "0.1.29"
bincode = "1.3.3"
futures = "0.3.19"
claim = "0.5.0"
test-case = "1.2.1"
