[package]
name = "como-mqtt"
version = "0.2.1"
authors = ["Ruslan Pislari <ruslanti@gmail.com>"]
edition = "2021"

[dependencies]
tokio = { version = "1.24.1", features = ["net", "time"] }
tokio-util = { version = "0.7.4", features = ["codec"] }
bytes = "1.3.0"
byteorder = "1.4.3"
anyhow = "1.0.68"
thiserror = "1.0.38"
#serde = { version = "1.0.133", features = ["derive"] }
tracing = "0.1.37"
bincode = "1.3.3"
futures = "0.3.25"
[dev-dependencies]
claims= "0.7.1"
test-case = "2.2.2"
